# horizons

./: .gitignore  README.md  pyproject.toml  setup.py
src/horizons/: cli.py  config.py  db.py
src/horizons/collector/: rss.py
tests/: __init__.py  conftest.py  test_cli_summarize.py  test_collector_rss.py  test_collector_webpage.py  test_config.py  test_db.py  test_mailer.py  test_summarizer.py
