[project]
name = "horizons"
version = "0.1.0"
description = "Automated follower insight tool"
readme = "README.md"
authors = [{ name = "HalFTeen" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "trafilatura>=1.7.0",
    "sqlite-utils>=3.37",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.3",
    "rich>=13.7.0",
    "markdown>=3.5.2",
    "yt-dlp>=2024.1.1",
    "faster-whisper>=1.0.0"
]

[project.scripts]
horizons = "horizons.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/horizons"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
